# leetbot-telegram

./: .env  .env.example  .gitignore  AGENTS.md  LICENSE  README.md  TODO.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini
.opencode/plans/: PRD.md
admin/: __init__.py  __main__.py  app.py
database/: __init__.py  database.py  db_models.py  seed_data.py
models/: __init__.py  models.py
services/: __init__.py  algorithm_service.py  graphql_service.py  notification_service.py  question_service.py  user_service.py
tests/: test_bot.py  test_graphql.py  test_models.py  test_services.py  test_utils.py
utils/: __init__.py  cache.py  config.py  exceptions.py  rate_limiter.py
